# AlphaMetrics

./: .gitignore  LICENSE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: AlphaMetrics.md
src/core/: __init__.py  precision.py  smoothing.py  types.py  validation.py
src/quant/: __init__.py  black_scholes.py  capm.py  monte_carlo.py  portfolio.py
src/risk/: __init__.py  cvar.py  drawdown.py  sharpe.py  sortino.py  var.py
src/stats/: __init__.py  correlation.py  regression.py  returns.py  timeseries.py  volatility_models.py
src/systems/: __init__.py  backtest.py  costs.py  order_types.py  position_sizing.py  stop_loss.py  walk_forward.py
src/trend/: __init__.py  ema.py  ichimoku.py  macd.py  rsi.py  sma.py  stochastic.py
src/volatility/: __init__.py  adl.py  adx.py  atr.py  bollinger.py  obv.py  vwap.py
tests/: conftest.py
tests/test_core/: test_smoothing.py  test_validation.py
tests/test_quant/: test_quant.py
tests/test_risk/: test_risk.py
tests/test_stats/: test_stats.py
tests/test_systems/: test_systems.py
tests/test_trend/: test_trend.py
tests/test_volatility/: test_volatility.py
