[project]
name = "alphametrics"
version = "0.1.0"
description = "Production-grade technical analysis and quantitative finance library"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scipy>=1.12",
]

[project.optional-dependencies]
stats = ["statsmodels>=0.14", "arch>=6.0", "pmdarima>=2.0"]
sklearn = ["scikit-learn>=1.4"]
all = ["alphametrics[stats,sklearn]"]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "black",
    "ruff",
    "mypy",
]

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
